--- a/things-selector-content-by-menu.html
+++ b/things-selector-content-by-menu.html
@@ -223,7 +223,19 @@ Copyright © HatioLab Inc. All rights reserved.
 							checkBar: false
 						}
 					}
-				}
+				},
+                /**
+                 * 选取数据后想要处理的逻辑，默认在things-selector-behavior配置此函数
+                 * ******
+                 * @params {Object} 如果选取源是Grid传递原Grid的GridRow Object和selectedRecord, 如果选取源是Form传递selectedRecord
+                 * @type {Function}
+                 */
+                selectedEventCallback:{
+                    type: Object,
+                    value: function(){
+                        return function(eventDetailObj){}
+                    }
+                }
 			},
 
 			listeners : {
@@ -417,7 +429,11 @@ Copyright © HatioLab Inc. All rights reserved.
 			_selectRecordByForm: function(event) {
 				var selectedResource = event.detail;
 				var ownerData = this.findOwnerData();
-
+				var evt = this.selectedEventCallback(selectedResource);
+                if (evt.defaultPrevented) {
+                	this.closeResourceSelectorDialog();
+                	return ;
+                }
 				// resource format selector인 경우 Object 값으로 설정한다.
 				if(this.ownerElement.localName == 'things-resource-format-selector') {
 					this.ownerElement.setObjValue(selectedResource);
@@ -477,7 +493,6 @@ Copyright © HatioLab Inc. All rights reserved.
 			 */
 			_selectRecordByGrid: function(event) {
 				var selectedResource = event.detail;
-
 				// 메뉴에서 설정한 idField와 titleField로 event.detail내의 값을 추출한 뒤 object로 구성하여 그리드의 row 데이터 중에 업데이트 할 필드로 업데이트한다.
 				var parentGrid = this.ownerElement;
 				var idField = this.getIdField();
@@ -488,6 +503,12 @@ Copyright © HatioLab Inc. All rights reserved.
 
 				if(row && row.dataIndex() >= 0) {
 					var rowObj = row.getRowObject();
+					var evt = this.selectedEventCallback({ rowObj: rowObj, resource : selectedResource });
+	                if (evt.defaultPrevented) {
+	                	this.closeResourceSelectorDialog();
+	                	return ;
+	                }
+	                
 					var objToChange = rowObj[this.ownerField];
 
 					if(this.valueField) {
@@ -501,7 +522,6 @@ Copyright © HatioLab Inc. All rights reserved.
 
 					// Bind Fields 정보로 Grid 데이터 변경
 					this._bindObjectFields(selectedResource, rowObj);
-					this.fire('things-resource-selector-selected', { rowObj: rowObj, resource : selectedResource } );
 
 					// 부모 그리드 Refresh
 					dataSet.updateRow(this.parentGridRowIdx, rowObj);
