--- a/things-resource-selector-behavior.html
+++ b/things-resource-selector-behavior.html
@@ -42,6 +42,10 @@ Copyright © HatioLab Inc. All rights reserved.
      */
     openResourceSelectorByGrid: function (parentGrid, parentGridRowIdx, selectorConfig, modal) {
       var selector = this._createResourceContent(parentGrid, parentGrid, selectorConfig);
+      var self = this;
+      selector.selectedEventCallback = function(selectedResource){
+        return self.fire('things-resource-selector-selected', selectedResource,{ cancelable: true });
+      }
       selector.parentGridRowIdx = parentGridRowIdx;
       if (selectorConfig.valueField) selector.valueField = selectorConfig.valueField;
       var event = { view: selector, modal: modal };
@@ -57,6 +61,10 @@ Copyright © HatioLab Inc. All rights reserved.
      */
     openResourceSelectorByForm: function (ownerElement, modal, ownerForm) {
       var selector = this._createResourceContent(ownerElement, ownerForm);
+      var self = this;
+      selector.selectedEventCallback = function(selectedResource){
+        return self.fire('things-resource-selector-selected', selectedResource,{ cancelable: true });
+      }
       var event = { view: selector, modal: modal };
       this.fire('things-open-popup-view', event);
     },
