--- a/things-resource-format-selector.html
+++ b/things-resource-format-selector.html
@@ -32,14 +32,20 @@ Copyright © HatioLab Inc. All rights reserved.
       @apply(--things-picker-button);
       background:url(/images/icon-resource-select.png) 50% 3px no-repeat var(--paper-blue-grey-300);
     }
+    paper-icon-button[readonly]{
+        opacity:0.1;
+    }
+    iron-icon[readonly]{
+        opacity:0.4;
+    }
   </style>
 
   <template>
     <label>[[label]]</label>
-    <input is="iron-input" name="[[name]]" bind-value="[[value]]" readonly>
-    <paper-icon-button suffix on-tap="clearValue" icon="clear" alt="clear" title="clear">
+    <input is="iron-input" name="[[name]]" bind-value="[[value]]" readonly disabled$="[[readonly]]">
+    <paper-icon-button readonly$="[[readonly]]" suffix on-tap="clearValue" icon="clear" alt="clear" title="clear">
     </paper-icon-button>
-    <iron-icon prefix on-tap="openResourceSelector"></iron-icon>
+    <iron-icon readonly$="[[readonly]]" prefix on-tap="openResourceSelector"></iron-icon>
   </template>
 
   <script type="text/javascript">
@@ -135,6 +141,10 @@ Copyright © HatioLab Inc. All rights reserved.
         valueField: {
           type: String,
           value: 'name'
+        },
+        readonly: {
+            type: Boolean,
+            value: false
         }
       },
 
@@ -178,6 +188,9 @@ Copyright © HatioLab Inc. All rights reserved.
        * *********
        */
       openResourceSelector: function() {
+        if(this.readonly){
+            return ;
+        }
         var form = this.findOwnerForm(this);
         this.openResourceSelectorByForm(this, true, form);
       },
@@ -206,6 +219,9 @@ Copyright © HatioLab Inc. All rights reserved.
        * ******
        */
       clearValue: function() {
+        if(this.readonly){
+            return ;
+        }
         this.objValue = null;
       }
     });
