--- a/elements.html
+++ b/elements.html
@@ -11,6 +11,7 @@ Copyright © HatioLab Inc. All rights reserved.
 <link rel="import" href="things-selector-content.html">
 <link rel="import" href="things-selector-content-by-menu.html">
 <link rel="import" href="things-selector-content-by-entity.html">
+<link rel="import" href="things-selector-content-by-service.html">
 <link rel="import" href="things-selector-form-behavior.html">
 <link rel="import" href="things-selector-form-search-behavior.html">
 <link rel="import" href="things-selector-form.html">
