### 修改内容 * 修改绑定entity时，第一次打开弹出框标题不显示翻译的问题

--- a/things-selector-content-by-entity.html
+++ b/things-selector-content-by-entity.html
@@ -264,8 +264,8 @@ Copyright © HatioLab Inc. All rights reserved.
 			 * @param {Object} entity
 			 */
 			_entityChanged: function(entity) {
-				if(entity) {
-					this.title = entity.title;
+				if (entity && !this.title) {
+					this.title = Things.DataGlobal.t('menu.' + this.resourceName);
 				}
 			},
 
